# turbo

./: .gitignore  CMakeLists.txt  package.sh  tags
lib/geometry/: .point.hpp.swp  .polygon.hpp.swp  CMakeLists.txt  line_segment.hpp  line_segment_set.hpp  orientation.hpp  point.hpp  polygon.hpp  sphere.hpp
lib/structures/: CMakeLists.txt  segment_tree.hpp
samples/kattis/polygon/: 1.in
submissions/codeforces/: .257c.cpp.swp  18a.cpp  231d.cpp  257c.cpp  380c.cpp  552d.cpp  559a.cpp  706a.cpp  749b.cpp  772b.cpp  794b.cpp  842b.cpp  849b.cpp  CMakeLists.txt
submissions/kattis/: CMakeLists.txt  polygon.cpp  simplepolygon.cpp
submissions/spoj/: .CMakeLists.txt.swp  CMakeLists.txt  dquery.cpp  kgss.cpp  kquery.cpp  rpln.cpp
test/geometry/: CMakeLists.txt  vector_test.cpp
test/structures/: CMakeLists.txt  segment_tree_test.cpp
